# mecanum

./: README.md  USAGE_GUIDE.md
src/mecanum_bringup/: CMakeLists.txt  package.xml
src/mecanum_bringup/config/: robot_params.yaml
src/mecanum_bringup/launch/: hardware.launch.py  mecanum_robot.launch.py  simulation.launch.py
src/mecanum_bringup/scripts/: mecanum_demo.py
src/mecanum_control/: CMakeLists.txt  package.xml
src/mecanum_control/include/mecanum_control/: controller.hpp
src/mecanum_control/src/: controller.cpp  main.cpp  odometry.py
src/mecanum_description/: CMakeLists.txt  package.xml
src/mecanum_description/launch/: display.launch.py  robot_description.launch.py
src/mecanum_description/rviz/: mecanum_robot.rviz  mecanum_robot_teleop.rviz
src/mecanum_description/urdf/: materials.xacro  mecanum_robot.urdf.xacro
src/mecanum_kinematics/: CMakeLists.txt  package.xml
src/mecanum_kinematics/include/mecanum_kinematics/: kinematics.hpp
src/mecanum_kinematics/src/: kinematics.cpp  main.cpp
src/mecanum_msgs/: CMakeLists.txt  package.xml
src/mecanum_robot_kcf/: CMakeLists.txt  package.xml
src/mecanum_robot_kcf/src/: PID.cpp
src/mecanum_robot_keyboard/: package.xml  setup.py
src/mecanum_robot_keyboard/mecanum_robot_keyboard/: mecanum_keyboard.py
src/mecanum_robot_msg/: CMakeLists.txt  package.xml
src/mecanum_robot_nav2/: CMakeLists.txt  package.xml
src/mecanum_robot_nav2/launch/: mecanum_nav2.launch.py  save_map.launch.py
src/mecanum_robot_nav2/map/: RAI.yaml
src/mecanum_robot_rrt2/config/: nav2_params.yaml
src/mecanum_robot_rrt2/launch/navigation/: nav2_bringup_launch.py  nav2_localization_launch.py  nav2_navigation_launch.py  nav2_slam_launch.py
src/mecanum_robot_rrt2/launch/rrt_exploration/: action_servers.launch.py  rrt_assigner.launch.py  rrt_exploration.launch.py  visual_slam_start.py  wheeltec_rrt_slam.launch.py
src/mecanum_robot_rrt2/src/: find_robot_action_server.cpp  pick_robot_action_server.cpp
src/mecanum_robot_rrt2/src/bt_plugins/: find_coloured_box.cpp  pick_coloured_box.cpp
src/mecanum_robot_rrt2/src/rrt_exploration/: assigner.cpp  filter.cpp  wait_for_fin.cpp
src/mecanum_robot_rtab/: CMakeLists.txt  package.xml
src/mecanum_robot_rtab/launch/: mecanum_nav2_rtab.launch.py  rtabmap_localization.launch.py
src/mecanum_robot_rtab/params/: rtabmap_nav_params.yaml
src/mecanum_robot_slam/mecanum_cartographer/: CMakeLists.txt  package.xml
src/mecanum_robot_slam/mecanum_cartographer/launch/: cartographer.launch.py  slam_rtabmap.launch.py
src/mecanum_robot_slam/mecanum_slam_toolbox/: CMakeLists.txt  package.xml
src/mecanum_robot_slam/mecanum_slam_toolbox/launch/: online_async_launch.py  online_sync.launch.py
src/mecanum_robot_slam/orb_slam_2_ros-ros2/orb_slam2/src/: pointcloudmapping.cc
src/mecanum_robot_slam/orb_slam_2_ros-ros2/ros/config/: params_Gemini_rgbd.yaml
src/mecanum_robot_slam/orb_slam_2_ros-ros2/ros/launch/: orb_slam2_Astra_rgbd_launch.py  orb_slam2_Gemini_rgb_launch.py
src/mecanum_robot_urdf/mecanum_robot_urdf/: CMakeLists.txt  package.xml
src/mecanum_robot_urdf/mecanum_robot_urdf/urdf/: brushless_senior_diff.urdf  flagship_mec_dl_robot.urdf  four_wheel_diff_dl_robot.urdf  top_akm_dl_robot.urdf
src/mecanum_rrt_msg/: CMakeLists.txt  package.xml
src/mecanum_teleop/: package.xml  setup.py
src/mecanum_teleop/launch/: robot_teleop.launch.py  teleop_joy.launch.py  teleop_keyboard.launch.py
src/mecanum_teleop/mecanum_teleop/: teleop_joy.py  teleop_keyboard.py
