<?xml version="1.0"?>
<package format="3">
  <name>mecanum_description</name>
  <version>0.0.0</version>
  <description>URDF and visualization for Mecanum robot</description>
  <maintainer email="ntdev204@todo.todo">ntdev204</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies -->
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
