<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mecanum_robot_urdf</name>
  <version>2.1.0</version>
  <description>
    3D models of the mecanum_robot for simulation and visualization
  </description>
  <maintainer email="mecanum@todo.todo">mecanum</maintainer>
  <license>TODO: License declaration</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>urdf</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
